--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola mundo!</title>
 </head>
 <body>
-    <p>Hola, este es mi primer proyecto con linux y Visual Studio Code</p>
+    <p>Hola, este es mi primer proyecto pero esta vez esta editado para una prueba de estudiante.</p>
 </body>
 </html>
